--- a/packages/plugin-md/package.json
+++ b/packages/plugin-md/package.json
@@ -9,20 +9,32 @@
     "vite-plugin",
     "md"
   ],
-  "main": "index.js",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.cjs"
+    }
+  },
   "files": [
     "dist"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "unbuild --stub"
   },
   "peerDependencies": {
     "vite": "^4.3.7"
   },
   "dependencies": {
+    "@babel/core": "^7.21.8",
     "diacritics": "^1.3.0",
     "escape-html": "^1.0.3",
     "gray-matter": "^4.0.3",
+    "lru-cache": "^9.1.1",
     "markdown-it": "^13.0.1",
     "markdown-it-anchor": "^8.6.7",
     "markdown-it-container": "^3.0.0",
