--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "cz": "cz",
     "fix": "eslint --fix .",
     "build": "pnpm run -C packages/plugin-md build",
+    "update:version": "tsx scripts/update-version.ts",
     "dev": "pnpm run -C play dev"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.38.6",
+    "@pnpm/find-workspace-packages": "^6.0.8",
     "@types/debug": "^4.1.7",
     "@types/diacritics": "^1.3.1",
     "@types/escape-html": "^1.0.2",
