fix(custom): 尝试修复发包

--- a/.npmrc
+++ b/.npmrc
@@ -1,8 +1,4 @@
-# https://pnpm.io/zh/npmrc#shamefully-hoist
+//registry.npmjs.com/:_authToken=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
 shamefully-hoist=true
-# 严格安装依赖
 strict-peer-dependencies=false
-# 适应全平台
 shell-emulator=true
-# 
-registry = https://registry.npmjs.org/
