fix(custom): 尝试修复workflow

--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,4 @@
-//registry.npmjs.com/:_authToken=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
+//registry.npmjs.com/:_authToken=${{ secrets.NPM_PUBLISH_TOKEN }}
 shamefully-hoist=true
 strict-peer-dependencies=false
 shell-emulator=true
